# co_aux_tools

./: .gitignore  LICENSE  README.md  get_cpu_count.py  get_dir_contents.py  get_fasta_file.py  get_groups.py  get_logger.py  get_read_direction.py  get_read_pattern.py  get_read_prefix.py  pyproject.toml  set_log_msg.py  setup.cfg
co_aux_tools.egg-info/: PKG-INFO  SOURCES.txt
co_tools.egg-info/: PKG-INFO  SOURCES.txt
docs/: index.html  search.js
docs/src/: co_tools.html
docs/src/co_tools/: co_fasta.html  co_fastq.html  co_utils.html  get_cpu_count.html  get_dir_contents.html  get_fasta_file.html  get_fastq_pair.html  get_fwd_fastqs.html  get_groups.html  get_logger.html  get_pipeline_confirm.html  get_read_direction.html  get_read_pattern.html  get_read_prefix.html  get_rev_file.html  set_log_msg.html
src/: setup.cfg
src/aux_tools_utils/: util.py
src/co_aux_tools.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/co_tools/: __init__.py  co_fasta.py  co_fastq.py  co_utils.py  get_cpu_count.py  get_dir_contents.py  get_fasta_file.py  get_fastq_pair.py  get_fastqs.py  get_fwd_fastqs.py  get_groups.py  get_logger.py  get_pipeline_confirm.py  get_read_direction.py  get_read_pattern.py  get_read_prefix.py  get_rev_file.py  set_log_msg.py
src/co_tools/co_logger/: __init__.py
src/codeoceanauxtools/: co_fastq.py  co_utils.py  get_cpu_count.py  get_dir_contents.py  get_fasta_file.py  get_fwd_fastqs.py  get_groups.py  get_logger.py  get_pipeline_confirm.py  get_read_direction.py  get_read_pattern.py  get_read_prefix.py  get_rev_file.py  set_log_msg.py  util.py
src/codeoceanauxtools/utils/: util.py
src/utils/: util.py
tests/: conftest.py  test_get_cpu_count.py  test_get_dir_contents.py  test_get_fasta_file.py  test_get_fastqs.py  test_get_fwd_fastqs.py  test_get_groups.py  test_get_pipeline_confirm.py  test_get_read_direction.py  test_get_read_pattern.py  test_get_read_prefix.py  test_get_rev_file.py
tests/fixtures/: dirs_of_files.py  fastq_file.py  sample_sheets.py
