[metadata]
name = co_aux_tools
version = 0.0.1
author = Frank Zappulla
author_email = frank@codeocean.com
description = A suite of convenience tools and utilities for working with sequencing files and Code Ocean capsules
keywords = codeocean, ngs, bioinformatics, compbio, metagenomics, genomics, transcriptomics
license = MIT License
classifiers = 
    Programming Language :: Python :: 3


[options]
packages = co_tools
python_requires = >=3.6

[options.entry_points]
console_scripts =
    get_cpu_count = src.co_tools.get_cpu_count:main
    get_dir_contents = src.co_tools.get_dir_contents:main
    get_fwd_fastqs = src.co_tools.get_fwd_fastqs:main
    get_groups = src.co_tools.get_groups:main
    get_pipeline_confirm = src.co_tools.get_pipeline_confirm:main
    get_read_direction = src.co_tools.get_read_direction:main
    get_read_pattern = src.co_tools.get_read_pattern:main
    get_read_prefix = src.co_tools.get_read_prefix:main
    get_rev_file = src.co_tools.get_rev_file:main
    set_log_msg = src.co_tools.set_log_msg:main
