[metadata]
name = co_aux_tools
version = 0.0.2
author = Frank Zappulla
author_email = frank@codeocean.com
description = A suite of convenience tools and utilities for working with sequencing files and Code Ocean capsules
keywords = codeocean, ngs, bioinformatics, compbio, metagenomics, genomics, transcriptomics
license = MIT License
classifiers = 
    Programming Language :: Python :: 3


[options]
packages = co_tools
python_requires = >=3.6

[options.entry_points]
console_scripts =
    get_cpu_count = co_tools.get_cpu_count:main
    get_dir_contents = co_tools.get_dir_contents:main
    get_fastq_pair = co_tools.get_fastq_pair:main
    get_fwd_fastqs = co_tools.get_fwd_fastqs:main
    get_groups = co_tools.get_groups:main
    get_pipeline_confirm = co_tools.get_pipeline_confirm:main
    get_read_direction = co_tools.get_read_direction:main
    get_read_pattern = co_tools.get_read_pattern:main
    get_read_prefix = co_tools.get_read_prefix:main
    get_rev_file = co_tools.get_rev_file:main
    set_log_msg = co_tools.set_log_msg:main
